refactord the theme , added some pages

--- a/i18n/react-i18next/ar/Nav.json
+++ b/i18n/react-i18next/ar/Nav.json
@@ -2,5 +2,6 @@
   "home": "الرئيسية",
   "about": "عن الصفحة",
   "blog": "المدونة",
-  "categories": "التصنيفات"
+  "categories": "التصنيفات",
+  "contact": "تواصل"
 }
