--- a/i18n/react-i18next/en/Nav.json
+++ b/i18n/react-i18next/en/Nav.json
@@ -2,5 +2,6 @@
   "home": "home",
   "about": "about me",
   "blog": "blog",
-  "categories": "categories"
+  "categories": "categories",
+  "contact": "contact me"
 }
