--- a/i18n/react-i18next/fr/Nav.json
+++ b/i18n/react-i18next/fr/Nav.json
@@ -2,5 +2,6 @@
   "home": "domicile",
   "about": "À propos de moi",
   "blog": "blog",
-  "categories": "catégories"
+  "categories": "catégories",
+  "contact": "contacto"
 }
