--- a/i18n/react-i18next/en/Nav.json
+++ b/i18n/react-i18next/en/Nav.json
@@ -1,7 +1,7 @@
 {
   "home": "home",
-  "about": "about me",
+  "about": "about",
   "blog": "blog",
   "categories": "categories",
-  "contact": "contact me"
+  "contact": "contact"
 }
