fixed some components and pushing now to producion to try

--- a/i18n/react-i18next/ar/Nav.json
+++ b/i18n/react-i18next/ar/Nav.json
@@ -3,5 +3,6 @@
   "about": "عن الصفحة",
   "blog": "المدونة",
   "categories": "التصنيفات",
-  "contact": "تواصل"
+  "contact": "تواصل",
+  "toggle": "غير وضع الرؤية"
 }
