--- a/i18n/react-i18next/en/Nav.json
+++ b/i18n/react-i18next/en/Nav.json
@@ -3,5 +3,6 @@
   "about": "about",
   "blog": "blog",
   "categories": "categories",
-  "contact": "contact"
+  "contact": "contact",
+  "toggle": "toggle Mode"
 }
