--- a/i18n/react-i18next/fr/Nav.json
+++ b/i18n/react-i18next/fr/Nav.json
@@ -3,5 +3,6 @@
   "about": "À propos de moi",
   "blog": "blog",
   "categories": "catégories",
-  "contact": "contacto"
+  "contact": "contact",
+  "toggle": "basculer le mode"
 }
